testcases/valid/russel4.prove
[A] [[A]:set] [ [x] [[x]:set] => [ [[x]in[A]] = [[[x]in[x]]=>[![]]] ] ] => 
[ [A] => [[[A]in[A]] = [[[A]in[A]]=>[![]]]] ] =>
[ [[A]in[A]] = [[[A]in[A]]=>[![]]] ] =>
[ [[A]in[A]] =>
    [[[A]in[A]]=>[![]]] =>
    [![]]] =>
[ [[A]in[A]] => [![]]] =>
[ [A]in[A] ] =>
[![]]
