testcases/invalid/wrongimp.prove
[A][B]=>[![[A]op[B]]]=>[A]
